prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-boutique-ingress
  namespace: online-boutique
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Prevent 301 redirects to HTTPS
spec:
  rules:
    - host: shop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
    - host: chat.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-ui
                port:
                  number: 8501
